--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <!-- 3DCGモデルの読み込み -->
     <a-assets>
-      <a-asset-item id="vroid" src="/zo3zo3.github.io/ARdemo/vroid.glb"></a-asset-item>
+      <a-asset-item id="vroid" src="ARdemo/vroid.glb"></a-asset-item>
     </a-assets>
 
     <!-- 自作マーカーを追加  -->
-    <a-marker type='pattern' url='/zo3zo3.github.io/ARdemo/pattern-qr-code.patt'>
+    <a-marker type='pattern' url='ARdemo/pattern-qr-code.patt'>
 
       <!-- 3DCGモデルの呼び出し -->
       <a-gltf-model src="#vroid"></a-gltf-model>
