--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>A-Frame で超簡単 AR</title>
+  </head>
+  <body style="margin:0px; overflow:hidden;">
+    <!-- A-Frame ライブラリの読み込み -->
+    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <!-- AR.js ライブラリの読み込み -->
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
-<head>
-  <!-- A-Frame を読み込む -->
-  <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-  <!-- AR.js を読み込む -->
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
-</head>
+    <!-- A-Frame の VR空間に AR.js を紐づける（デバッグUIは非表示） -->
+    <a-scene embedded arjs="debugUIEnabled:false;">
 
-<body style='margin: 0; overflow: hidden;'>
-  <!-- シーンを追加 -->
-  <a-scene embedded arjs="debugUIEnabled:false;">
+      <!-- マーカーを登録（プリセットされている「hiro」マーカー） -->
+      <a-marker preset="hiro">
+        <!-- マーカーの場所に箱を置く（見やすいようにワイヤーフレーム表示） -->
+        <a-box position="0 0.5 0" wireframe="true"></a-box>
+      </a-marker>
 
-    <!-- 3DCGモデルの読み込み -->
-    <a-assets>
-      <a-asset-item id="vroid" src="zo3zo3.github.io/ARdemo/vroid.glb"></a-asset-item>
-    </a-assets>
+      <!-- AR用のカメラを置く -->
+      <a-entity camera></a-entity>
 
-    <!-- 自作マーカーを追加  -->
-    <a-marker type='pattern' url='zo3zo3.github.io/ARdemo/pattern-qr-code.patt'>
-
-      <!-- 3DCGモデルの呼び出し -->
-      <a-gltf-model src="#vroid"></a-gltf-model>
-
-    </a-marker>
-
-    <!-- カメラを追加 -->
-    <a-entity camera></a-entity>
-  </a-scene>
-</body>
-
+    </a-scene>
+  </body>
 </html>
+
