--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- モデルの読み込み -->
     <a-assets>
-      <a-asset-item id="cpu1-obj" src="test1.obj"></a-asset-item>
-      <a-asset-item id="cpu1-mtl" src="test1.mtl"></a-asset-item>
+      <a-asset-item id="cpu1-obj" src="cpu1.obj"></a-asset-item>
+      <a-asset-item id="cpu1-mtl" src="cpu1.mtl"></a-asset-item>
       
  <!--     <a-asset-item id="test2-obj" src="test2.obj"></a-asset-item>
       <a-asset-item id="test2-mtl" src="test2.mtl"></a-asset-item>
